# openGL_testing

./: .gitignore  CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/shaders/: fragmentShader.frag  shaders.cpp  shaders.h  vertexShader.vert
src/: cube.cpp  cube.h  main.cpp  perlinNoise.cpp  perlinNoise.h
